add_subdirectory(schematics)

set(common_SCRIPT_CPP_MODS_ETHEREAL_SRCS
	${common_SCRIPT_CPP_MODS_ETHEREAL_SCHEMATICS_SRCS}
	${CMAKE_CURRENT_SOURCE_DIR}/init.c
	${CMAKE_CURRENT_SOURCE_DIR}/bonemeal.c
	${CMAKE_CURRENT_SOURCE_DIR}/compatibility.c
	${CMAKE_CURRENT_SOURCE_DIR}/crystal.c
	${CMAKE_CURRENT_SOURCE_DIR}/dirt.c
	${CMAKE_CURRENT_SOURCE_DIR}/extra.c
	${CMAKE_CURRENT_SOURCE_DIR}/fences.c
	${CMAKE_CURRENT_SOURCE_DIR}/fishing.c
	${CMAKE_CURRENT_SOURCE_DIR}/flowers.c
	${CMAKE_CURRENT_SOURCE_DIR}/food.c
	${CMAKE_CURRENT_SOURCE_DIR}/gates.c
	${CMAKE_CURRENT_SOURCE_DIR}/leaves.c
	${CMAKE_CURRENT_SOURCE_DIR}/mapgen.c
	${CMAKE_CURRENT_SOURCE_DIR}/mushroom.c
	${CMAKE_CURRENT_SOURCE_DIR}/onion.c
	${CMAKE_CURRENT_SOURCE_DIR}/ores.c
	${CMAKE_CURRENT_SOURCE_DIR}/papyrus.c
	${CMAKE_CURRENT_SOURCE_DIR}/plantpack.c
	${CMAKE_CURRENT_SOURCE_DIR}/plantlife.c
	${CMAKE_CURRENT_SOURCE_DIR}/sapling.c
	${CMAKE_CURRENT_SOURCE_DIR}/sealife.c
	${CMAKE_CURRENT_SOURCE_DIR}/stairs.c
	${CMAKE_CURRENT_SOURCE_DIR}/strawberry.c
	${CMAKE_CURRENT_SOURCE_DIR}/water.c
	${CMAKE_CURRENT_SOURCE_DIR}/wood.c
	PARENT_SCOPE)

